# CARA-template

./: .env.example  .gitattributes  .gitignore  .replit  CARA_Action_Plan_Checkboxes_Analysis.md  CARA_DEPLOY_README.md  CARA_requirements.txt  CITATION.cff  CODE_REVIEW_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  HERC_Region_1_HVA_Export.xlsx  LICENSE  README.md  README_CARA_Application.md  SECURITY.md  VERSION.txt  agencies.txt  app.py  core.py  example_health_departments.json  existing_routes.txt  existing_utils.txt  gunicorn.conf.py  imported_routes.txt  imported_utils.txt  main.py  mod_direct.txt  mod_from.txt  models.py  pyproject.toml  render.yaml  render.yaml.example  replit.md  replit.nix  requirements-dev.txt  requirements.txt  response.json  routes.py  wi_health_departments.json
.agents/: agent_assets_metadata.toml
attached_assets/: Active_Shooter_Risk_Scoring_Framework.txt  GunViolenceArchive 2023 mass shootings data.csv  NRI_Table_CensusTracts_Wisconsin_FloodTornadoWinterOnly.csv  PHEP Notice of Funding Opportunity -PKG00285036-instructions.docx  Pasted--CARA-Comprehensive-Automated-Risk-Assessment-Python-3-11-https-img-shields-io-badge-pyth-1757514692571_1757514692572.txt  Pasted--Export-Buttons-div-class-row-mb-4--1765275920144_1765275920146.txt  Pasted--Option-1-CITATION-cff-recommended-Create-a-file-at-the_1770442206593.txt  Pasted--PS-C-Users-jaime-Remove-Item-C-Users-jaime-Documents-C_1770443963411.txt  Pasted--Search-Dec-3-12-35-PM-12-41-PM-CST-Menu-Uploading-buil_1764787641113.txt  RAs_in_PHEP_Research_Paper_DRAFT08_1771823939528.docx  (+23 more)
(+294 files in other folders)
