[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "CARA - Comprehensive Automated Risk Assessment for Wisconsin Public Health Departments"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "census>=0.8.23",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "folium>=0.19.5",
    "fpdf>=1.7.2",
    "geopandas>=1.0.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.86.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyreadstat>=1.2.8",
    "pyshp>=2.3.1",
    "scikit-learn>=1.6.1",
    "sendgrid>=6.12.4",
    "shapely>=2.0.7",
    "statsmodels>=0.14.4",

    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
]
